[tool.poetry]
name = "product_service"
version = "0.1.0"
description = "Product service for online mart"
authors = ["Shafiq <shafiq00786@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"
sqlalchemy = "^1.4.23"
alembic = "^1.7.1"
psycopg2-binary = "^2.9.1"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-asyncio = "^0.15.1"
